<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camp_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/soldier"
        style="@style/btnStyleBlackpearl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/soldier" />

    <Button
        android:id="@+id/archer"
        style="@style/btnStyleBlackpearl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/archer" />

    <Button
        android:id="@+id/paladin"
        style="@style/btnStyleBlackpearl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/paladin" />
    
    <Button
        android:id="@+id/cancel"
        style="@style/btnStyleBlackpearl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/cancel" />

</LinearLayout>
