<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text"
        android:layout_margin="12dp"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes"
            style="@style/btnStyleBlackpearl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/no"
            style="@style/btnStyleBlackpearl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/no" />

    </LinearLayout>

</LinearLayout>
